added new steps in ci-cd

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,7 +58,10 @@ jobs:
           cd ${{ env.env_path }}
           terraform plan 
 
-    #   - name: Terraform Apply
-    #     if: github.ref == 'main' || github.ref == 'staging'
-    #     run: terraform apply -auto-approve -var-file=${{ github.ref_name }}.tfvars
+      - name: Terraform Apply
+        if: github.ref == 'main' || github.ref == 'stage'
+        run: |
+            cd ${{ env.env_path }}
+            terraform apply 
+    
 
