--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,7 +69,7 @@ jobs:
           terraform plan 
 
       - name: Terraform Apply (for dev and staging)
-        if: inputs.action == 'apply' && (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/staging')
+        if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/staging'
         run: |
           cd ${{ env.env_path }}
           terraform apply -auto-approve 
@@ -81,7 +81,6 @@ jobs:
     environment:
       name: prod  # This enables manual approval for the 'prod' environment
     if: github.ref == 'refs/heads/prod'
-    needs: terraform
 
     permissions:
       id-token: write
