--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -6,8 +6,7 @@ projects:
     autoplan:
       when_modified: ["*.tf", "*.tfvars"]
       enabled: true
-    pre_workflow:
-     - run: terraform init -backend-config="bucket=my-iac-states" -backend-config="key=dev/terraform.tfstate"
+    extra_args: ["-backend-config=bucket=my-iac-states", "-backend-config=key=dev/terraform.tfstate"]
   
   # - name: production
   #   dir: environment/production
